<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2016 Gurupad Mamadapur
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="com.calgen.prodek.sunshine_v2.customView.LocationEditText"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <io.github.protino.customView.LocationEditText
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label"
        custom:minLength="3"
        />

    <ListPreference
        android:defaultValue="@string/pref_temperature_default"
        android:entries="@array/pref_unit_titles"
        android:entryValues="@array/pref_unit_values"
        android:key="@string/pref_temperature_key"
        android:title="@string/pref_temperature_label"/>

    <ListPreference
        android:defaultValue="@string/pref_icon_pack_default"
        android:entries="@array/pref_icon_pack_titles"
        android:entryValues="@array/pref_icon_pack_values"
        android:key="@string/pref_icon_pack_key"
        android:title="@string/pref_icon_pack_label"/>

    <CheckBoxPreference
        android:defaultValue="@string/pref_notification_default"
        android:key="@string/pref_notification_key"
        android:title="@string/pref_notification_title"
        />
</PreferenceScreen>